Added github url to package json

--- a/projects/ngx-joystick/package.json
+++ b/projects/ngx-joystick/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "An angular wrapper around nipplejs providing a joystick component",
   "author": "Wes Weitzel",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wweitzel/ngx-joystick.git"
+  },
   "keywords": [
     "angular",
     "javascript",
