Update description. Bump version to 0.1.0

--- a/projects/ngx-joystick/package.json
+++ b/projects/ngx-joystick/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-joystick",
-  "version": "0.0.3",
-  "description": "An angular wrapper around nipplejs providing a joystick component",
+  "version": "0.1.0",
+  "description": "NgxJoystick is an angular joystick component. It is a wrapper around the nipplejs library providing virtual joystick functionality to your angular application.",
   "author": "Wes Weitzel",
   "repository": {
     "type": "git",
