--- a/projects/ngx-joystick/tsconfig.lib.json
+++ b/projects/ngx-joystick/tsconfig.lib.json
@@ -12,6 +12,7 @@
     ]
   },
   "angularCompilerOptions": {
+    "compilationMode": "partial",
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
     "fullTemplateTypeCheck": true,
