--- a/angular.json
+++ b/angular.json
@@ -127,7 +127,7 @@
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/ngx-joystick/tsconfig.lib.json",
             "project": "projects/ngx-joystick/ng-package.json"
