--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "nipplejs": "^0.8.5",
     "rxjs": "~6.6.3",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "ngx-joystick": "file:./dist/ngx-joystick"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.15",
-    "@angular-devkit/build-ng-packagr": "~0.901.12",
     "@angular/cli": "^12.2.15",
     "@angular/compiler-cli": "~12.2.15",
     "@angular/language-service": "~12.2.15",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.12",
