--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.15",
-    "@angular/common": "~12.2.15",
-    "@angular/compiler": "~12.2.15",
-    "@angular/core": "~12.2.15",
-    "@angular/forms": "~12.2.15",
-    "@angular/platform-browser": "~12.2.15",
-    "@angular/platform-browser-dynamic": "~12.2.15",
-    "@angular/router": "~12.2.15",
-    "nipplejs": "^0.8.5",
-    "rxjs": "~6.6.3",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4",
-    "ngx-joystick": "file:./dist/ngx-joystick"
+    "@angular/animations": "~14.1.1",
+    "@angular/common": "~14.1.1",
+    "@angular/compiler": "~14.1.1",
+    "@angular/core": "~14.1.1",
+    "@angular/forms": "~14.1.1",
+    "@angular/platform-browser": "~14.1.1",
+    "@angular/platform-browser-dynamic": "~14.1.1",
+    "@angular/router": "~14.1.1",
+    "ngx-joystick": "file:./dist/ngx-joystick",
+    "nipplejs": "^0.9.1",
+    "rxjs": "~7.5.6",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.15",
-    "@angular/cli": "^12.2.15",
-    "@angular/compiler-cli": "~12.2.15",
-    "@angular/language-service": "~12.2.15",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.12",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^12.2.6",
+    "@angular-devkit/build-angular": "~14.1.1",
+    "@angular/cli": "^14.1.1",
+    "@angular/compiler-cli": "^14.1.1",
+    "@angular/language-service": "~14.1.1",
+    "@types/jasmine": "~4.0.3",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^18.6.3",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.3.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "ng-packagr": "^14.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "~10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.7.4"
   }
 }
